# sp_backend

./: .cache  .coverage  .gitignore  Pipfile  README.md  pyproject.toml  requirements.txt  その他便利コマンド.txt  検証用アクセストークン.txt
docs/: データベース設計について.md  ユーザの状態管理について.md  現アーキテクチャについて(サービス_リポジトリ層の追加).md
docs/knowledge/: [DjangoRestFramework]DBログの取得について.md  [Django]SiteフレームワークとSITE_IDについて.md  [Django]get_context_data(initial)について.md  [Django]カスタムコマンドとスクリプトの使い分け.md  [Django]メッセージフレームワーク (Messages Framework) の概要.md
docs/memo/: シグナルを使った作成を使うケース.md  メモ20260331.md  メモ_20260403.md
src/: .env.sample  final_verify.py  pytest.ini  scratch.py  test_views.py  verify_playlist_service.py  verify_playlist_service_dbless.py
src/apps/: ※チェック方針.md
src/apps/account/: admin.py  admin_bk_normal_django.py  apps.py  exceptions.py  services.py  signals.py  urls.py
src/apps/artist/: admin.py  admin_bk_normal_django copy.py  apps.py  exceptions.py  services.py  urls.py
src/apps/common/: admin.py  admin_bk_normal_django.py  apps.py  exceptions.py  service.py
src/apps/playlist/: admin.py  admin_bk_normal_django.py  apps.py  exceptions.py  services copy.py  services.py  urls.py
src/config/: admin_dashboard.py  asgi.py  settings.py  urls.py  wsgi.py
src/core/: admin.py  apps.py  console_email_backends.py  consts.py  messages.py  models.py  views.py
src/core/auth_scheme/: jwt_auth_backend.py  supabase_jwt_auth_backend.py
src/core/decorators/: logging_process_with_sql.py  logging_process_with_sql__.py
src/core/exceptions/: exception_handler.py  exceptions.py
src/core/middlewares/: logging_middleware.py  same_site_middleware.py
src/core/services/: email_service.py  setlistfm_service.py  spotify_service.py  storage_service.py
src/core/utils/: common.py  date_format.py  enum_utils.py  log_helpers.py  thread_pool_executor.py
src/core/validators/: validate_required_settings.py
src/templates/account/: user_activity.html
src/templates/admin/: index.html  login copy.html  login.html  logout.html
(+126 files in other folders)
